@startuml
skinparam classAttributeIconSize 0
left to right direction

class Platform {
  -String designation
  +agendNotification()
  +getRegistoFreelancer()
}

class FreelancersRecord{
  +int numberTransactions
  +int delay
  +int amountForHourDelay
  +percentageDelayFreel()
  +averageDelay()
  +getDelay()
  +scheduleAutomaticEmail()
}

abstract Timer {
  +run()
  +schedule(delay,intervalo)
}

class NotifyFreelancerTask {
  +run() 
  +sendEmail()
  +nextNotification()
}

class Freelancer {
  -String id
  -String name
  -String expertiseLevel
  -String email
  -String NIF
  -String IBAN
  -String address
  -String country
  +getEmail()
  +List<Freelancer> ListFreelancer
  }

class PaymentTransaction{
 -Date endDate
 -Double delay
 -String workQualityDescription
  +getDelay()
  +getFreelancer()
}

class PaymentTransactionList {
  +get(i) 
}


Platform "1" -- "*" PaymentTransactionList : has registered >
Platform "1" -- "1" NotifyFreelancerTask : has >
Platform "1" -- "1" FreelancersRecord : has >

NotifyFreelancerTask  --  Timer 

FreelancersRecord "1" -- "1..*" Freelancer : possui >

PaymentTransaction "1" -- "1" Freelancer: is related to >

PaymentTransactionList "1" -- "1..*" PaymentTransaction : has >


@enduml